--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ h3{
 }
 h5{
   font-family: 'Inter', sans-serif;
-  font-size: 32px;
+  font-size: 30px;
   font-style: normal;
   font-weight: 600;
   line-height: 56px; 
@@ -70,8 +70,14 @@ button{
   border-radius: 10px;
   background: #F00;
   padding:15px 30px;
+  border: none;
+}
+span{
+  color:#F00
 }
 /* universal part done */
+
+
 /* Header part */
 header{
   background-image: linear-gradient(0deg, #000, transparent),url('resources/Banner\ Image.png');
@@ -98,10 +104,12 @@ header div h3{
 }
 /* header part end */
 /* Main part on */
+
+
 /* Discount Section */
 .discount_section{
 width: 60%;
-margin:0 auto 140px;
+margin:0 auto 120px;
 
 }
 .discount h1{
@@ -122,6 +130,8 @@ display: flex;
 justify-content: center;
 }
 /* Discount section  end */
+
+
 /* Welcome to Midnight Party card */
 .celebration_card{
   background: linear-gradient(90deg, black, transparent), url('resources/Vectorrr.png');
@@ -152,3 +162,27 @@ justify-content: center;
   width: 30%;
 }
 /* Welcome to Midnight Party card end */
+
+/* place, time, Date card open */
+.date_time_section{
+  width: 100%;
+  height: 480px;
+  background: linear-gradient(180deg, #ff00001a,transparent);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 120px;
+
+}
+.date_time{
+  width:70%;
+  margin:100px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.date_time button{
+  margin-top:50px;
+}
+/* place, time, Date card closed */
