--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ h5{
 h6{
   color: #F00;
   font-family: 'Inter', sans-serif;
-  font-size: 24px;
+  font-size: 25px;
   font-weight: 500;
 }
 p{
@@ -186,3 +186,45 @@ justify-content: center;
   margin-top:50px;
 }
 /* place, time, Date card closed */
+
+/* next Offer section on */
+.next_offer_section{
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+ margin-bottom: 120px;
+}
+.next_offer_section h3{
+  font-size: 45px;
+}
+
+.common{
+  width:30%;
+}
+.offer_img_border{
+  width:400px;
+  height:400px;
+  border-radius: 50%;
+  border: 10px solid red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.offer_img_border img{
+  width:340px;
+
+}
+.offer_2024{
+  display: flex;
+  flex-direction: column;
+  gap:50px
+}
+
+.offer_2024 h3{
+color:#F00
+}
+.img_new_year{
+  display: flex;
+  justify-content: center;
+}
+/* next Offer section off */
