--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ justify-content: center;
   justify-content: center;
   align-items: center;
   margin-bottom: 120px;
+  border-radius: 10px;
 
 }
 .date_time{
@@ -278,11 +279,11 @@ color:#F00
 .portfolio_title_div{
  max-width:60%;
 }
-.portfolio_title_div h3{
+.portfolio_title_div h3, .subscribe h3{
   font-family: 'Merriweather', serif;
 }
 .portfolio{
-  margin-top: 50px;
+  margin: 50px 0 120px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -296,3 +297,49 @@ gap:50px
 .portfolio img{
   width: 510px;
 }
+/* Portfolio section end */
+
+/* Subscribe Newsletter section start*/
+.subscribe_section{
+  background: #ff00000d;
+  width: 100%;
+  height: 600px;
+  padding-top: 50px;
+  align-items: center;
+  justify-content: space-around;
+  border-radius: 10px;
+}
+.subscribe{
+  max-width:900px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap:20px;
+  
+}
+
+.input_div{
+  width: 650px;
+  margin:50px auto;
+}
+.input_div input{
+  padding:30px;
+  border: none;
+  font-size: 20px;
+  font-weight: 600;
+  font-family:'Inter', sans-serif;
+}
+.input_div input[type=email]{
+  border-radius: 50px 0 0 50px;
+  width:400px;
+}
+.input_div input[type=submit]{
+  background-color: #F00;
+  border-radius: 0 50px 50px 0;
+  width: 200px;
+  color:#fff;
+}
+
+/* Subscribe Newsletter section done*/
+/* Main section Done */
