--- a/style.css
+++ b/style.css
@@ -75,6 +75,12 @@ button{
 span{
   color:#F00
 }
+hr{
+  margin: 50px auto 0;
+  width: 90%;
+  border:1px solid #2c2a2a;
+
+}
 /* universal part done */
 
 
@@ -198,7 +204,6 @@ justify-content: center;
 .next_offer_section h3{
   font-size: 45px;
 }
-
 .common{
   width:30%;
 }
@@ -220,7 +225,6 @@ justify-content: center;
   flex-direction: column;
   gap:50px
 }
-
 .offer_2024 h3{
 color:#F00
 }
@@ -308,6 +312,7 @@ gap:50px
   align-items: center;
   justify-content: space-around;
   border-radius: 10px;
+  margin-bottom: 120px;
 }
 .subscribe{
   max-width:900px;
@@ -318,7 +323,6 @@ gap:50px
   gap:20px;
   
 }
-
 .input_div{
   width: 650px;
   margin:50px auto;
@@ -340,6 +344,49 @@ gap:50px
   width: 200px;
   color:#fff;
 }
-
 /* Subscribe Newsletter section done*/
 /* Main section Done */
+
+/* footer section on */
+  footer{
+    background: #000;
+    width: 100%;
+    height:600px;
+    padding-top: 100px;
+  }
+  .address{
+    max-width: 300px;
+  }
+  .footer_div{
+    margin: auto;
+    width:90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  footer h6{
+    color:#fff
+  }
+  .number{
+    display: flex;
+    gap:10px;
+    align-items: center;
+  }
+  .social_media{
+    display: flex;
+    gap:30px;
+    justify-content: center;
+    margin-top: 100px;
+  }
+  .social_media li{
+    list-style: none;
+  }
+  .copyright{
+    margin:50px auto 0;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+/* footer section off */
+/* tata bye bye */
