--- a/style.css
+++ b/style.css
@@ -295,23 +295,18 @@ color:#F00
 .portfolio_title_div h3, .subscribe h3{
   font-family: 'Merriweather', serif;
 }
-.portfolio{
-  margin: 50px 0 120px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap:50px;
+.clumn{
+  float: left;
+  width: 33.33%;
+  padding:5px;
 }
-.portfolio_1, .portfolio_2{
-display: flex;
-justify-content: center;
-gap:50px
+.row::after{
+  content: "";
+  display: table;
+  clear: both;
 }
-.portfolio img{
-  width: 510px;
-  border-radius: 10px;
-}
-.portfolio img:hover{
+
+.clumn img:hover{
   transform: translateY(-10px);
   transition: 0.5s;
   box-shadow: 10px 10px 20px #c21853;
