--- a/style.css
+++ b/style.css
@@ -299,6 +299,10 @@ color:#F00
   float: left;
   width: 33.33%;
   padding:5px;
+  
+}
+.clumn img{
+  border-radius: 15px;
 }
 .row::after{
   content: "";
