coming soon offer added

--- a/style.css
+++ b/style.css
@@ -204,35 +204,42 @@ justify-content: center;
 /* place, time, Date card closed */
 
 /* next Offer section on */
-.next_offer_section{
- display: flex;
- justify-content: space-between;
- align-items: center;
- margin-bottom: 120px;
+.next_offer_clumn{
+  float: left;
+  width: 33.33%;
+  padding:10px;
 }
-.next_offer_section h3{
-  font-size: 45px;
+.next_offer_row{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 120px;
 }
-.common{
-  width:30%;
+.next_offer_row::after{
+  content: "";
+  display: table;
+  clear: both;
+}
+.comming_soon_part, .offer_2024{
+  max-width: 400px;
+  padding:10px;
+}
+.comming_soon_part h3{
+  font-family: 'Merriweather', serif ;
 }
 .offer_img_border{
-  width:400px;
-  height:400px;
+  width:100%;
+  padding: 15px;
   border-radius: 50%;
   border: 10px solid red;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.offer_img_border img{
-  width:340px;
-
-}
 .offer_2024{
   display: flex;
   flex-direction: column;
-  gap:50px
+  gap:50px;
 }
 .offer_2024 h3{
 color:#F00
